Issue #2983 less verbose
Signed-off-by: Greg Wilkins <gregw@webtide.com>