@@ -18,6 +18,7 @@
 
 package org.eclipse.jetty.webapp;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.AbstractList;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -78,14 +79,18 @@ public class Configurations extends AbstractList<Configuration>
                 try
                 {
                     Configuration configuration = i.next();
+                    if (!configuration.isAvailable())
+                    {
+                        if (LOG.isDebugEnabled())
+                            LOG.debug("Configuration unavailable: "+configuration);
+                        continue;
+                    }
                     __known.add(configuration);
                     __knownByClassName.add(configuration.getClass().getName());
                 }
                 catch (Throwable e)
                 {
-                    LOG.info("Configuration unavailable: "+e.getMessage());
-                    if (LOG.isDebugEnabled())
-                        LOG.debug(e);
+                    LOG.warn(e);
                 }
             }
 
@@ -113,7 +118,14 @@ public class Configurations extends AbstractList<Configuration>
         {
             try
             {
-                Class<?> clazz = Loader.loadClass(c);
+                Class<? extends Configuration> clazz = Loader.loadClass(c);
+                Configuration configuration = clazz.getConstructor().newInstance();
+                if (!configuration.isAvailable())
+                {
+                    if (LOG.isDebugEnabled())
+                        LOG.warn("Configuration unavailable: "+configuration);
+                    continue;
+                }
                 __known.add((Configuration)clazz.newInstance());
                 __knownByClassName.add(c);
             }
@@ -232,9 +244,9 @@ public class Configurations extends AbstractList<Configuration>
         {
             @SuppressWarnings("unchecked")
             Class<Configuration> clazz = Loader.loadClass(classname);
-            return clazz.newInstance();
+            return clazz.getConstructor().newInstance();
         }
-        catch (ClassNotFoundException | InstantiationException | IllegalAccessException e)
+        catch (Throwable e)
         {
             throw new RuntimeException(e);
         }
